fixes site text spacing and adds drop shadow

--- a/styles.less
+++ b/styles.less
@@ -216,45 +216,43 @@ body.thanks {
 }
 .signature-name {
   font-family: "proxima-nova", Arial;
-  font-style: normal;
   font-weight: 800;
   font-size: 21px;
+  text-shadow: 1px 2px rgba( 0, 0, 0, 0.2);
 }
 .signature-city-state {
   font-family: "proxima-nova", Arial;
-  font-style: normal;
   font-weight: 400;
   font-size: 16px;
+  text-shadow: 1px 2px rgba( 0, 0, 0, 0.2);
 }
 .hostile .sitelink-text {
   position: absolute;
   font-family: "proxima-nova", Arial;
   color: white;
-  font-style: normal;
   font-weight: 400;
   font-size: 14px;
-  font-weight: 400;
+  text-shadow: 1px 2px rgba( 0, 0, 0, 0.2);
   text-transform: uppercase;
   width: 100%;
   bottom: 0;
   left: 0;
-  margin: 0 45px 11px 45px;
+  margin-bottom: 11px;
+  margin-left: 35px;
+  letter-spacing: 2.5px;
 }
 .help .sitelink-text,
 .thanks .sitelink-text {
   position: absolute;
   font-family: "proxima-nova", Arial;
   color: white;
-  font-style: normal;
   font-weight: 400;
   font-size: 14px;
-  font-weight: 400;
+  text-shadow: 1px 2px rgba( 0, 0, 0, 0.2);
   text-transform: uppercase;
   bottom: 0;
   right: 0;
-  margin: 0 45px 11px 45px;
+  margin-bottom: 11px;
+  margin-right: 35px;
+  letter-spacing: 2.5px;
 }
-
-
-
-
